--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
   color: #2c3e50;
 }
 
-.list {
-  min-height: 500px;
+#global-wrapper {
+  height: 300px;
+  padding: 2rem 0;
+  width: 400px;
 }
